# Pong

./: CMakeLists.txt  Game.cpp  README.md  main.cpp
include/: Components.h  ECS.h  FontManager.h  Game.h  GameObject.h  TextureManager.h  Window.h
include/Components/: ColliderComponent.h  PositionComponent.h  SpriteComponent.h  TransformComponent.h  WindowBoundComponent.h
include/components/: AI.h  Ball.h  Collider.h  ColliderComponent.h  Player.h  Score.h  SpriteComponent.h
include/systems/: AISystem.cpp  AISystem.h  ColliderSystem.cpp  ColliderSystem.h  CollisionSystem.cpp  CollisionSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  WinLossScreen.cpp  WinLossScreen.h
src/: FontManager.cpp  Game.cpp  GameObject.cpp  TextureManager.cpp  Window.cpp  main.cpp
